--- a/pom.xml
+++ b/pom.xml
@@ -8,8 +8,8 @@
         <version>3.6</version>
         <relativePath/>
     </parent>
-    <artifactId>working-hours</artifactId>
-    <version>1.1-SNAPSHOT</version>
+    <artifactId>react-boilerplate</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.73.3</jenkins.version>
@@ -17,9 +17,9 @@
         <node.version>10.13.0</node.version>
         <npm.version>6.8.0</npm.version>
     </properties>
-    <name>Working Hours Plugin</name>
-    <description>Queues builds that ran after certain working hours</description>
-    <url>https://wiki.jenkins-ci.org/display/JENKINS/Working-Hours-Plugin</url>
+    <name>React Boilerplate for Jenkins Plugin</name>
+    <description>Boilerplate to write Jenkins plugin in React.</description>
+    <url>https://github.com/ShenJack/ReactPluginBoilerplateforJenkins</url>
     <licenses>
         <license>
             <name>MIT License</name>
@@ -185,9 +185,9 @@
 
     <developers>
         <developer>
-            <id>jeffpearce</id>
-            <name>Jeff Pearce</name>
-            <email>jxpearce@godaddy.com</email>
+            <id>jackshen</id>
+            <name>Jack Shen</name>
+            <email>angus0314shen@gmail.com</email>
         </developer>
     </developers>
 
