--- a/src/main/react/package.json
+++ b/src/main/react/package.json
@@ -20,7 +20,7 @@
         "build:copy": "rimraf ../webapp/page && npm run build && node internals/copy-paste.js",
         "build-test": "cross-env NODE_ENV=production webpack --config internals/webpack/webpack.test.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
         "build:clean": "rimraf ./build",
-        "start": "cross-env NODE_ENV=development BASE_URL=\"/jenkins/working-hours\" node server",
+        "start": "cross-env NODE_ENV=development BASE_URL=\"/jenkins/react-boilerplate\" node server",
         "start:watch-build": "cross-env NODE_ENV=development webpack --config internals/webpack/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout --watch",
         "start:tunnel": "cross-env NODE_ENV=development ENABLE_TUNNEL=true node server",
         "start:production": "npm run test && npm run build && npm run start:prod",
@@ -43,17 +43,6 @@
         "coveralls": "cat ./coverage/lcov.info | coveralls",
         "prettify": "prettier --write"
     },
-    "lint-staged": {
-        "*.js": [
-            "npm run lint:eslint:fix",
-            "git add --force"
-        ],
-        "*.json": [
-            "prettier --write",
-            "git add --force"
-        ]
-    },
-    "pre-commit": "lint:staged",
     "resolutions": {
         "babel-core": "7.0.0-bridge.0",
         "moment-timezone/moment": "2.18.1",
